Add how-to docs in storybook and improve the storybook

--- a/src/components/sdk/MeetingControls/docs/AudioInputControl.stories.mdx
+++ b/src/components/sdk/MeetingControls/docs/AudioInputControl.stories.mdx
@@ -10,7 +10,7 @@ These audio input options are provided by the `useAudioInputs` hook.
 
 When you click the button, the local audio input toggles between muted/unmuted state.
 
-You can use it in the [ControlBar component](/?path=/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
+You can use it in the [ControlBar component](/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
 
 ## Importing
 
