--- a/src/components/sdk/MeetingControls/docs/AudioOutputControl.stories.mdx
+++ b/src/components/sdk/MeetingControls/docs/AudioOutputControl.stories.mdx
@@ -10,7 +10,7 @@ These audio output options are provided by the `useAudioOutputs` hook.
 
 When you click the button, the local audio output toggles between on/off state.
 
-You can use it in the [ControlBar component](/?path=/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
+You can use it in the [ControlBar component](/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
 
 ## Importing
 
