--- a/src/components/sdk/MeetingControls/docs/ContentShareControl.stories.mdx
+++ b/src/components/sdk/MeetingControls/docs/ContentShareControl.stories.mdx
@@ -9,7 +9,7 @@ The `ContentShareControl` component renders a `ControlBarButton` with pop over m
 
 When you click the button, the content share toggles between on/off state.
 
-You can use it in the [ControlBar component](/?path=/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
+You can use it in the [ControlBar component](/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
 
 ## Importing
 
