--- a/src/components/ui/ControlBar/ControlBar.mdx
+++ b/src/components/ui/ControlBar/ControlBar.mdx
@@ -13,7 +13,7 @@ The ControlBar component displays a section of controls with icons and labels.
 
 You can place ControlBar into the parent element according to the `layout` prop, e.g. `top`, `bottom`, `right`, `left`, `undocked-horizontal`, and `undocked-vertical`.
 
-The ControlBar component contains one or more `ControlBarButton` components, which can show a label and icon. You can add a dropdown list to each ControlBarButton by setting the [popOver props](/?path=/docs/ui-components-popover--basic-pop-over-menu).
+The ControlBar component contains one or more `ControlBarButton` components, which can show a label and icon. You can add a dropdown list to each ControlBarButton by setting the [popOver props](/docs/ui-components-popover--basic-pop-over-menu).
 
 `ControlBarButton` support tooltips on any buttons by adding a `data-tooltip` property. Adding a `data-tooltip-position` property controls the tooltip position. The tooltip will render the `label` passed, unless a `tooltipContent` prop is passed.
 
