--- a/src/components/ui/VideoGrid/VideoGrid.mdx
+++ b/src/components/ui/VideoGrid/VideoGrid.mdx
@@ -8,7 +8,7 @@ import { GlobalStyles } from '../../../theme/GlobalStyles';
 
 # VideoGrid
 
-The VideoGrid component adapts to screen size and orientation, ensuring consistent rendering of up to 16 [VideoTiles](/?path=/docs/ui-components-video-videotile--video-tiles).
+The VideoGrid component adapts to screen size and orientation, ensuring consistent rendering of up to 16 [VideoTiles](/docs/ui-components-video-videotile--video-tiles).
 
 It also supports a 'featured’ layout, which will give a single tile a larger portion of the available space, and lay out the other tiles as smaller, ‘thumbnail’ styled, videos.
 
