--- a/src/hooks/introduction.stories.mdx
+++ b/src/hooks/introduction.stories.mdx
@@ -6,7 +6,7 @@ React hooks that provide functionality or state related to your Amazon Chime mee
 
 ## Getting Started
 
-Refer to the [primary introduction page](/?path=/docs/introduction--page) on how to get your app setup with a `MeetingProvider`, and for how to join a meeting.
+Refer to the [primary introduction page](/docs/introduction--page) on how to get your app setup with a `MeetingProvider`, and for how to join a meeting.
 
 Once you have your `MeetingProvider` rendered and you've joined a meeting, you can use these hooks to build out your meeting UIs.
 
@@ -59,7 +59,7 @@ const ContentShare () => => {
 
 ### Building a Roster
 
-_Note_ - You will need to have provided `meetingManager.getAttendee` with a function to fetch your attendee names, otherwise there will be no names in the roster. See the [MeetingManager documentation](/?path=/docs/providers-meetingmanager--page) for more information.
+_Note_ - You will need to have provided `meetingManager.getAttendee` with a function to fetch your attendee names, otherwise there will be no names in the roster. See the [MeetingManager documentation](/docs/providers-meetingmanager--page) for more information.
 
 ```jsx
 import { useRosterState, useAttendeeStatus } from 'amazon-chime-sdk-component-library-react';
