--- a/src/providers/DevicesProvider/docs/AudioInputProvider.stories.mdx
+++ b/src/providers/DevicesProvider/docs/AudioInputProvider.stories.mdx
@@ -22,7 +22,7 @@ The `AudioInputProvider` provides a list of the user's available `audio-input` d
 
 ```
 
-You can access the state by using the [useAudioInputs](/?path=/docs/sdk-hooks-useaudioinputs--page) hook.
+You can access the state by using the [useAudioInputs](/docs/sdk-hooks-useaudioinputs--page) hook.
 
 ## Importing
 
