--- a/src/providers/DevicesProvider/docs/AudioOutputProvider.stories.mdx
+++ b/src/providers/DevicesProvider/docs/AudioOutputProvider.stories.mdx
@@ -19,7 +19,7 @@ The `AudioOutputProvider` provides a list of the user's available `audio-output`
 
 ```
 
-You can access the state by using the [useAudioOutputs](/?path=/docs/sdk-hooks-useaudiooutputs--page) hook.
+You can access the state by using the [useAudioOutputs](/docs/sdk-hooks-useaudiooutputs--page) hook.
 
 ## Importing
 
