--- a/src/providers/DevicesProvider/docs/VideoInputProvider.stories.mdx
+++ b/src/providers/DevicesProvider/docs/VideoInputProvider.stories.mdx
@@ -22,7 +22,7 @@ Provides a list of the user's available `video-input` devices, the currently sel
 
 ```
 
-You can access the provided values using [useVideoInputs](/?path=/docs/sdk-hooks-usevideoinputs--page) hook.
+You can access the provided values using [useVideoInputs](/docs/sdk-hooks-usevideoinputs--page) hook.
 
 ## Importing
 
