--- a/src/providers/LocalAudioOutputProvider/docs/LocalAudioOutputProvider.stories.mdx
+++ b/src/providers/LocalAudioOutputProvider/docs/LocalAudioOutputProvider.stories.mdx
@@ -18,7 +18,7 @@ This local audio output is the audio speaker output and **not** the microphone (
 }
 ```
 
-You can access the state by using the [useLocalAudioOutput](/?path=/docs/sdk-hooks-uselocalaudiooutput--page) hook.
+You can access the state by using the [useLocalAudioOutput](/docs/sdk-hooks-uselocalaudiooutput--page) hook.
 
 ## Importing
 
