--- a/src/providers/LocalVideoProvider/docs/useLocalVideo.stories.mdx
+++ b/src/providers/LocalVideoProvider/docs/useLocalVideo.stories.mdx
@@ -6,7 +6,7 @@ The `useLocalVideo` hook returns video tile id associated with the local user's 
 
 The React SDK depends on the Amazon Chime SDK for JavaScript, wherein, a single video stream is attached to a video element at a time. Hence, if `PreviewVideo` and `LocalVideo` component both are rendered on the same page and if both are enabled, stopping the video preview in `PreviewVideo` component will result into disconnecting the video stream for `LocalVideo` as well showing a black screen.
 
-To start/stop a video preview, please check `PreviewVideo` component [documentation](/?path=/story/sdk-components-previewvideo--page).
+To start/stop a video preview, please check `PreviewVideo` component [documentation](/docs/sdk-components-previewvideo--page).
 To start/stop user's local video, use `toggleVideo` function from the `LocalVideoProvider`.
 
 ### Return Value
