--- a/src/providers/MeetingProvider/docs/useMeetingManager.stories.mdx
+++ b/src/providers/MeetingProvider/docs/useMeetingManager.stories.mdx
@@ -2,7 +2,7 @@
 
 # useMeetingManager
 
-The `useMeetingManager` hook returns the [MeetingManager](/?path=/docs/sdk-providers-meetingmanager--page) instance.
+The `useMeetingManager` hook returns the [MeetingManager](/docs/sdk-providers-meetingmanager--page) instance.
 
 ### Return Value
 
