--- a/src/providers/NotificationProvider/docs/NotificationProvider.stories.mdx
+++ b/src/providers/NotificationProvider/docs/NotificationProvider.stories.mdx
@@ -80,4 +80,4 @@ const NotificationGroup = () => {
 }
 ```
 
-**Note**: Check [useNotificationState](/?path=/docs/ui-hooks-notification-usenotificationstate--page) and [useNotificationDispatch](/?path=/docs/ui-hooks-notification-usenotificationdispatch--page) for more information.
+**Note**: Check [useNotificationState](/docs/ui-hooks-notification-usenotificationstate--page) and [useNotificationDispatch](/docs/ui-hooks-notification-usenotificationdispatch--page) for more information.
