--- a/src/providers/NotificationProvider/docs/useNotificationState.stories.mdx
+++ b/src/providers/NotificationProvider/docs/useNotificationState.stories.mdx
@@ -60,7 +60,7 @@ const MyChild = () => {
 }
 ```
 
-Note: Check `ActionType` information in `useNotificationDispatch` [documentation](/?path=/docs/ui-hooks-notification-usenotificationdispatch--page).
+Note: Check `ActionType` information in `useNotificationDispatch` [documentation](/docs/ui-hooks-notification-usenotificationdispatch--page).
 
 ### Dependencies
 
