--- a/src/providers/RosterProvider/docs/RosterProvider.stories.mdx
+++ b/src/providers/RosterProvider/docs/RosterProvider.stories.mdx
@@ -15,7 +15,7 @@ The `RosterProvider` provides the state of the roster. You must provide the `Mee
  }
 }
 ```
-You can access the state by using the [useRosterState](/?path=/docs/sdk-hooks-userosterstate--page) hook.
+You can access the state by using the [useRosterState](/docs/sdk-hooks-userosterstate--page) hook.
 
 ## Usage
 
