--- a/src/providers/UserActivityProvider/docs/UserActivityProvider.stories.mdx
+++ b/src/providers/UserActivityProvider/docs/UserActivityProvider.stories.mdx
@@ -2,7 +2,7 @@
 
 # UserActivityProvider
 
-The `UserActivityProvider` provides the state of user activity by tracking mouse movements and focus events. The user activity state can be used to conditionally show/hide elements like the [ControlBar](?path=/story/ui-components-controlbar--control-bar) component.
+The `UserActivityProvider` provides the state of user activity by tracking mouse movements and focus events. The user activity state can be used to conditionally show/hide elements like the [ControlBar](?path=/docs/ui-components-controlbar--control-bar) component.
 
 ### State
 
@@ -19,7 +19,7 @@ The `UserActivityProvider` provides the state of user activity by tracking mouse
 import { UserActivityProvider } from 'amazon-chime-sdk-component-library-react';
 ```
 
-You can access the state by using the [useUserActivityState](/?path=/docs/sdk-hooks-useuseractivitystate--page) hook.
+You can access the state by using the [useUserActivityState](/docs/sdk-hooks-useuseractivitystate--page) hook.
 
 ## Usage
 
