--- a/src/components/sdk/MeetingControls/docs/VideoInputControl.stories.mdx
+++ b/src/components/sdk/MeetingControls/docs/VideoInputControl.stories.mdx
@@ -10,7 +10,7 @@ These video input sources are provided by the `useVideoInputs` hook.
 
 When you click the button, the local video input toggles between on/off state.
 
-You can use it in the [ControlBar component](/?path=/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
+You can use it in the [ControlBar component](/docs/ui-components-controlbar--control-bar) to build the meeting controls bar.
 
 ## Importing
 
