--- a/src/components/ui/NotificationGroup/NotificationGroup.mdx
+++ b/src/components/ui/NotificationGroup/NotificationGroup.mdx
@@ -7,7 +7,7 @@ import { NotificationGroup } from '.';
 
 The NotificationGroup component renders any current notifications to the top of the screen.
 
-Check `NotificationProvider` [documentation](/?path=/docs/ui-providers-notificationprovider--page) for more information.
+Check `NotificationProvider` [documentation](/docs/ui-providers-notificationprovider--page) for more information.
 
 ## Importing
 
